// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationView should render children when enabled 1`] = `
<styled.div>
  <Styled(Field)
    data-test="validation-view-toggle"
  >
    <ToggleSwitch
      checked={true}
      hideLabels={false}
      id="ValidationView1"
      name="ValidationView1"
      onChange={[MockFunction]}
    />
  </Styled(Field)>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <Styled(CSSTransition)
      enter={true}
      exit={false}
      in={false}
      key="validation-enabled-true"
      timeout={250}
    >
      <Styled(styled.div)>
        <div>
          Children
        </div>
      </Styled(styled.div)>
    </Styled(CSSTransition)>
  </TransitionGroup>
</styled.div>
`;

exports[`ValidationView should render disabled messaged when disabled 1`] = `
<styled.div>
  <Styled(Field)
    data-test="validation-view-toggle"
  >
    <ToggleSwitch
      checked={false}
      hideLabels={false}
      id="ValidationView2"
      name="ValidationView2"
      onChange={[MockFunction]}
    />
  </Styled(Field)>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <Styled(CSSTransition)
      enter={true}
      exit={false}
      in={false}
      key="validation-enabled-false"
      timeout={250}
    >
      <Styled(styled.div)>
        <div>
          Children
        </div>
      </Styled(styled.div)>
    </Styled(CSSTransition)>
  </TransitionGroup>
</styled.div>
`;
